--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-API_KEY="XXXXXX"
-AUTH_DOMAIN= "XXXX.firebaseapp.com"
-DATABASE_URL="https://XXXX.firebaseio.com"
-PROJECT_ID="XXXX"
-STORAGE_BUCKET="XXXX.appspot.com"
-MESSAGING_SENDER_ID="9999999"
-APP_ID="1XXXX"
-OPEN_AI_KEY="sk-XXXXXXXX"
+API_KEY="AIzaSyCsMZlWwn3gGpqZbgoNmd7u6nW05E95Blg"
+AUTH_DOMAIN= "ggjhiojo.firebaseapp.com"
+DATABASE_URL="https://ggjhiojo-default-rtdb.firebaseio.com"
+PROJECT_ID="ggjhiojo"
+STORAGE_BUCKET="ggjhiojo.appspot.com"
+MESSAGING_SENDER_ID="417361959733"
+APP_ID="1417361959733332ba781c8df37df23ca7c"
+OPEN_AI_KEY="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"
 PORT=3500
